# beacon2mqtt

./: LICENSE  README.md  beacon2mqtt.py  pyproject.toml  requirements.txt  scanner.py
