# PEP 518: https://www.python.org/dev/peps/pep-0518/

[tool.isort]
profile = "black"

[tool.poetry]
name = "beacon2mqtt"
version = "0.1.0"
description = "BLE Beacon to MQTT Bridge"
authors = ["Jakob Schlyter <jakob@schlyter.se>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.5.1"
beacontools = "^2.1.0"
expiringdict = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pylama = "^7.7.1"
pytest = "^6.1.2"
pytest-black = "^0.3.12"
pytest-isort = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
